@@ -6,7 +6,8 @@ nobase_Stub_DATA = squid.conf.mas  \
 	dansguardian.conf.mas dansguardianfN.conf.mas filtergroupslist.mas\
         exceptionsitelist.mas  bannedsitelist.mas  greysitelist.mas \
         bannedurllist.mas exceptionurllist.mas greyurllist.mas \
-	bannedextensionlist.mas bannedmimetypelist.mas  \
+	bannedextensionlist.mas bannedmimetypelist.mas  \ 
+	bannedphraselist.mas exceptionphraselist.mas \
 	dansguardian.logrotate
 
 
